--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-a{
+header a {
     text-decoration: none;
 }
 ul{
@@ -8,6 +8,7 @@ ul{
     margin-bottom: 0px;
 }
 .container{
+    display: flex;
     width: 1200px;
     margin: auto;
     padding-left: 15px;
@@ -29,17 +30,16 @@ margin-right: 0px;
 .pagination .item + .item{
     margin-left: 50px;
 }
+
 .pagination a:hover{
     color:#2196F3;
 }
-
 
 #portfolio-studio  a{
     border-bottom: 3px solid  #1a73e8;
     color: #1a73e8;
 } 
  
-
 .pagination a{
     color:#212121;
     display: block;
@@ -55,9 +55,9 @@ margin-right: 0px;
 
     
 }
-.aside{
-    display: flex;
-    margin-left: auto;
+.aside {
+    display: inline-flex;
+    margin-left: 305px;
 }
 
 .aside .item + .item{
@@ -69,6 +69,11 @@ margin-right: 0px;
 .aside a:hover{
     color:#2196F3;
 }
+
+li.envelope {
+    margin-right: 30px;
+}
+
 li.envelope::before{
     display: inline-flex;
     content: "";
@@ -271,9 +276,6 @@ h2{
 }
 
 
-
-
-
 .member {
     width: 270px;
     height: 428px;
@@ -292,6 +294,8 @@ h2{
     max-width: 1600px;
     margin: auto;
     margin-bottom: 94px;
+    padding-right: 15px;
+    padding-left: 15px;
 
 }
 .command-all img{
@@ -347,8 +351,6 @@ p.profession{
 }
 
 
-
-
 .svg-symbol {
     fill: #AFB1B8;
     
@@ -363,6 +365,7 @@ p.profession{
 }
 
 .logo {
+    display: flex;
     margin-bottom: 94px;
 }
 
@@ -392,12 +395,14 @@ footer{
 }
 .nav-footer{
     display: inline-block;
-    margin: auto;
 }
+
 .nav-footer img{
     margin-top: 60px;
     margin-bottom: 20px;
 }
+
+
 .aside-footer p{
     margin-bottom: 9px;
 }
@@ -424,12 +429,12 @@ footer p{
 }
 .tel-footer a{
     display: inline-block;
-    margin-bottom: 60px;
 }
 
 .all-links-footer{
     display: inline-block;
     text-align: center;
+    margin-top: 0px;
     margin-bottom: 100px;
     margin-left: 70px;
 }
@@ -438,7 +443,6 @@ footer p{
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    margin-top: 16px;
     width: 44px;
     height: 44px;
     color: #ffffff;
@@ -455,10 +459,63 @@ footer p{
     fill:#ffffff;
 }
 
+.footer-link {
+    margin-top: 75px;
+}
 
 .footer-link span{
+    display: inline-block;
+    color: #ffffff;
+    margin-bottom: 20px;
+}
+
+.form-footer {
+    display: inline-block;
+    margin-left: 93px;
+    margin-top: 75px;
+}
+
+.form-footer label {
+    display: inline-block;
+    color: #ffffff;
+    margin-bottom: 20px;
+}
+
+.form-input-footer {
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    border-radius: 4px;
+    width: 358px;
+    height: 50px;
+    background-color: #2F303A;
     color: #ffffff;
 }
+
+
+.subscribe-button {
+    display: inline-flex;
+    padding: 10px;
+    align-items: center;
+    text-align: center;
+    width: 200px;
+    height: 50px;
+    margin-top: 113px;
+    margin-left: 12px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+}
+
+.subscribe-button svg {
+    margin-left: 10px;
+}
+
+.subscribe-button span {
+    margin-left: 29px;
+    color:#ffffff;
+}
+    
 
 
 
@@ -587,7 +644,7 @@ h3{
     left: 0px;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: #00000033;
     opacity: 1;
     visibility: visible;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -608,22 +665,39 @@ h3{
     height: 581px;
     background-color: #ffffff;
 }
-.modal button{
-    margin: 0;
+.button-close{
+    float: right;
+    background-color: #ffffff;
+    border: 1px solid #21212133;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    padding: 0px;
+    margin-top: 8px;
+    margin-right: 8px;
+    cursor: pointer;
+}
+
+.button-close:hover .close {
+    fill: #2196F3;
 }
 
 .forms{
     width: 100%;
     padding: 40px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 .information li {
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
+    color: #757575;
 }
 
 .information b {
+    margin-top: 40px;
     margin-bottom: 12px;
     font-family: Roboto;
     font-style: normal;
@@ -635,14 +709,99 @@ h3{
     color: #212121;
 }
 
-.information li input {
+.information li input, textarea {
     padding: 10px 40px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
+    border: 1px solid #21212133;
     box-sizing: border-box;
     border-radius: 4px;
+}
+
+textarea {
+    padding-left: 16px;
+}
+
+input, textarea {
+    outline: none;
+}
+
+.form-svg:focus-within {
+    border: 1px solid #2196F3;
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+
+.vector {
+    position: absolute;
+    display: inline-block;
+    top: 123px;
+    margin-left: 12px;
+}
+
+.form-input:focus + .vector{
+    fill: #2196F3;
+}
+
+.vector-1 {
+    position: absolute;
+    display: inline-block;
+    top: 202px;
+    margin-left: 12px;
+}
+
+.form-input:focus + .vector-1{
+    fill: #2196F3;
+}
+
+.vector-2 {
+    position: absolute;
+    display: inline-block;
+    top: 278px;
+    margin-left: 12px;
+}
+
+.form-input:focus + .vector-2{
+    fill: #2196F3;
 }
 
 .coment {
     display: flex;
     flex-direction: column;
+    margin-bottom: 20px;
+    color: #757575;
+}
+
+.agreement {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #757575;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+}
+
+.agreement a {
+    margin-top: 40px;
+    color: #2196F3;
+}
+
+textarea {
+    resize: none;
+    width: 100%;
+    height: 120px;
+    margin-top: 4px;
+}
+
+.send {
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background-color: #2196F3;
+    color: #ffffff;
+    padding: 10px 32px;
+    border: none;
+    border-radius: 4px;
 }
